# quick-align

./: Cargo.toml  README.md
align/: .gitignore  Cargo.toml  generate_testset.py
align/src/: audioreader.rs  dtw.rs  dtw_striped.rs  fast_dtw.rs  freq.rs  lib.rs  main.rs  tts.rs
align/src/dtw/: fastdtw.rs  window.rs
epub/: Cargo.toml
epub/src/: lib.rs
espeakng/: Cargo.toml
espeakng/src/: lib.rs
mfcc/: Cargo.toml
mfcc/src/: freq.rs  lib.rs
src/: audioreader.rs  dtw.rs  freq.rs  lib.rs  main.rs  mfcc.rs
src/dtw/: window.rs
