[package]
name = "quick-align"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version="3.2.17", features = ["derive"] }
espeakng = { version = "0.1.0", path = "./espeakng", features = ["clang-runtime"] }
ffmpeg-next = "6"
lazy_static = "1.4.0"
ndarray= { version ="0.15.4", features = ["approx"] }
once_cell = "1.13.0"
realfft = { version = "3.2.0" }
