[package]
name = "align"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mfcc = {version="0.1.0", path="../mfcc"}
once_cell = "1.13.0"
ndarray-csv = "0.5.1"
ndarray= {version ="0.15.4", features = ["approx"]}
csv = "1.1.6"
espeakng-sys = "0.1.1"
lazy_static = "1.4.0"
clap = {version="3.2.17", features = ["derive"]}
ffmpeg-next = "5.1.1"
